--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/georgeStyles.css">
   </head>
   <body>
-    <!-- nav start -->
+    <!-- nav -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -37,7 +37,35 @@
           </div>
         </div>
       </nav>
-      <!-- nav end -->
+
+      <!-- header -->
+      <div class="header"></div>
+
+      <!-- Muzzles Sandwiches & Grill -->
+      <div class="container-fluid">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-4" style="background-image: url(./assets/homeSingle.jpg); background-size: cover;">
+                <!-- <img src="./assets/homeSingle.jpg" alt="" style="width: 647px;"> -->
+            </div>
+            <div class="col-md-6">
+                <div class="card border-0" style="border-radius: 0;">
+                    <div class="card-body p-0" style="">
+                      <h5 class="card-title p-3">Muzzles Sandwiches & Grill</h5>
+                      <p class="card-text p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <img src="./assets/HomeImage.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
+                  </div>
+            </div>
+        </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
+
+<!-- Footer -->
+<div class="footer">
+    <div class="text" style="grid-row: 1; grid-column: 1;">1357 Mutt Street, Rottweiler CA. 12345</div>
+    <div class="text" style="grid-row: 2; grid-column: 1;">Phone: 123-456-7890</div>
+    <div class="text d-flex justify-content-end" style="grid-row: 1; grid-column: 2;"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
+    <div class="text text-end" style="grid-row: 2; grid-column: 2;">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
+  </div>
