--- a/pages/About.html
+++ b/pages/About.html
@@ -43,11 +43,11 @@
   <!-- nav end -->
 
 
-  <div class="container-fluid section1">
-    <img class="sectionItem1_1" src="../assets/AboutMain.jpg" alt="Two dogs cooking">
-    <div class="sectionItem1_2">
-      <div class="sectionItem1_2_Title">The Story Behind the Grill</div>
-      <div class="sectionItem1_2_Paragraph">Malesuada fames ac turpis egestas integer eget aliquet nibh praesent. Mattis
+  <div class="container-fluid aboutSection1">
+    <img class="aboutSectionItem1_1" src="../assets/AboutMain.jpg" alt="Two dogs cooking">
+    <div class="aboutSectionItem1_2">
+      <div class="aboutSectionItem1_2_Title">The Story Behind the Grill</div>
+      <div class="aboutSectionItem1_2_Paragraph">Malesuada fames ac turpis egestas integer eget aliquet nibh praesent. Mattis
         molestie a iaculis at erat pellentesque adipiscing commodo. Quisque non tellus orci ac auctor augue. Tincidunt
         augue interdum velit euismod in pellentesque massa. Vel pharetra vel turpis nunc. Risus pretium quam vulputate
         dignissim suspendisse in est. Viverra nibh cras pulvinar mattis nunc sed blandit libero. Aenean pharetra magna
@@ -56,14 +56,14 @@
         tincidunt tortor. Dignissim sodales ut eu sem integer vitae. Facilisis magna etiam tempor orci eu. Pharetra
         pharetra massa massa ultricies mi quis. Mattis rhoncus urna neque viverra justo nec. Egestas purus viverra
         accumsan in nisl nisi scelerisque.</div><br>
-      <div class="sectionItem1_2_Paragraph">
+      <div class="aboutSectionItem1_2_Paragraph">
         Morbi tempus iaculis urna id. Aenean pharetra magna ac placerat. Mi proin sed libero enim sed faucibus turpis
         in. Et ultrices neque ornare aenean euismod. Quisque sagittis purus sit amet. Ultricies tristique nulla aliquet
         enim tortor at auctor urna. Purus faucibus ornare suspendisse sed. Tempor nec feugiat nisl pretium fusce id
         velit ut tortor. Sed cras ornare arcu dui vivamus arcu felis. Consectetur lorem donec massa sapien faucibus et
         molestie ac. Cum sociis natoque penatibus et magnis dis parturient. Ut faucibus pulvinar elementum integer enim.
         Vel risus commodo viverra maecenas accumsan. Nec dui nunc mattis enim ut.</div><br>
-      <div class="sectionItem1_2_Paragraph">
+      <div class="aboutSectionItem1_2_Paragraph">
         Posuere lorem ipsum dolor sit amet. Sed odio morbi quis commodo odio aenean. Tortor posuere ac ut consequat
         semper viverra nam libero. Tellus elementum sagittis vitae et leo duis ut. Egestas quis ipsum suspendisse
         ultrices gravida. Tempor commodo ullamcorper a lacus vestibulum sed arcu non odio. Auctor augue mauris augue
@@ -75,41 +75,41 @@
     </div>
   </div>
 
-  <div class="section2">
-    <div class="sectionItem2_1">
+  <div class="aboutSection2">
+    <div class="aboutSectionItem2_1">
       <div>Our Team</div>
     </div>
-    <div class="sectionItem2_2-7" style="grid-row: 3; grid-column: 1;">
+    <div class="aboutSectionItem2_2-7" style="grid-row: 3; grid-column: 1;">
       <img src="../assets/doxie3.jpg" alt="">
       <div class="title">George</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
 
-    <div class="sectionItem2_2-7" style="grid-row: 3; grid-column: 3;">
+    <div class="aboutSectionItem2_2-7" style="grid-row: 3; grid-column: 3;">
       <img src="../assets/jackrussel.jpg" alt="">
       <div class="title">Butterscotch</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
 
-    <div class="sectionItem2_2-7" style="grid-row: 3; grid-column: 5;">
+    <div class="aboutSectionItem2_2-7" style="grid-row: 3; grid-column: 5;">
       <img src="../assets/doxie1.jpg" alt="">
       <div class="title">Louie</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
 
-    <div class="sectionItem2_2-7" style="grid-row: 5; grid-column: 1;">
+    <div class="aboutSectionItem2_2-7" style="grid-row: 5; grid-column: 1;">
       <img src="../assets/novascotia.jpg" alt="">
       <div class="title">Louie</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
     
-    <div class="sectionItem2_2-7" style="grid-row: 5; grid-column: 3;">
+    <div class="aboutSectionItem2_2-7" style="grid-row: 5; grid-column: 3;">
       <img src="../assets/doxie2.jpg" alt="">
       <div class="title">Skittles</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
 
-    <div class="sectionItem2_2-7" style="grid-row: 5; grid-column: 5;">
+    <div class="aboutSectionItem2_2-7" style="grid-row: 5; grid-column: 5;">
       <img src="../assets/staffie.jpg" alt="">
       <div class="title">Mario</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
