--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -35,8 +35,18 @@
       </div>
     </nav>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class=""></div>
+    <h1>Our Menu</h1>
+    </div>
+  </div>
+</div>
 
-    <h1>Hello, world!</h1>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
