--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -6,8 +6,13 @@
     <title>Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/master.css">
+    <link rel="stylesheet" href="../styles/treece.css">  
   </head>
   <body>
+
+
+
+
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -19,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">About</a>
+              <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Menu</a>
@@ -35,14 +40,24 @@
       </div>
     </nav>
 
-<div class="container">
+
+
+
+
+
+
+<div class="container bkGround">
   <div class="row">
     <div class="col">
-      <div class=""></div>
-    <h1>Our Menu</h1>
+    <h1 class="text-center txtColor">Our Menu</h1>
     </div>
   </div>
 </div>
+
+
+
+
+
 
 
 
