--- a/index.html
+++ b/index.html
@@ -42,16 +42,15 @@
       <div class="header"></div>
 
       <!-- Muzzles Sandwiches & Grill -->
-      <div class="container-fluid">
-        <div class="row d-flex justify-content-center">
-            <div class="col-md-4" style="background-image: url(./assets/homeSingle.jpg); background-size: cover;">
-                <!-- <img src="./assets/homeSingle.jpg" alt="" style="width: 647px;"> -->
+      <div class="container-fluid pt-3 pb-3">
+        <div class="row d-flex justify-content-between" style="padding: 44px 7.3%;">
+            <div class="col-auto" style="background-image: url(./assets/homeSingle.jpg); background-size: cover; width: 35.1%;">
             </div>
-            <div class="col-md-6">
+            <div class="col" style="width: 49.48%; height: 23.44%;">
                 <div class="card border-0" style="border-radius: 0;">
-                    <div class="card-body p-0" style="">
-                      <h5 class="card-title p-3">Muzzles Sandwiches & Grill</h5>
-                      <p class="card-text p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <div class="card-body p-0">
+                      <h5 class="card-title p-3 pb-0" style="font-size: 3vw; font-family:Fugaz One; color: #5F002B;">Muzzles Sandwiches & Grill</h5>
+                      <p class="card-text p-3 pt-0" style="font-size: 1vw; font-family:Montauk-Regular; color: #5F002B;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                     <img src="./assets/HomeImage.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
                   </div>
@@ -68,4 +67,4 @@
     <div class="text" style="grid-row: 2; grid-column: 1;">Phone: 123-456-7890</div>
     <div class="text d-flex justify-content-end" style="grid-row: 1; grid-column: 2;"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
     <div class="text text-end" style="grid-row: 2; grid-column: 2;">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
-  </div>
+  </div> 
