--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -46,16 +46,18 @@
 
 
 
-<div class="container bkGround">
-  <div class="row">
+<!-- <div class="container bkGround"> -->
+  <div class="row bkGround">
     <div class="col">
     <h1 class="text-center txtColor">Our Menu</h1>
     </div>
   </div>
+<!-- </div> -->
+
+
+<div class="menu">
+  <div class="photo"></div>
 </div>
-
-
-
 
 
 
