--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -6,9 +6,93 @@
     <title>Photos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/master.css">
+    <link rel="stylesheet" href="../styles/georgeStyles.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- nav -->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/MuzzlesLogo.png" alt="Bootstrap" width="250px">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Catering</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Photo</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="container-fluid">
+      <div class="row d-flex justify-content-between" style="padding: 44px 7.3%;">
+        <div class="col p-0">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+            <div class="card-body p-2">
+              <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
+            </div>
+          </div>
+        </div>
+        <div class="col p-0">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+            <div class="card-body p-2">
+              <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
+            </div>
+          </div>
+        </div>
+        <div class="col p-0">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+            <div class="card-body p-2">
+              <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
+            </div>
+          </div>
+        </div>
+        <div class="col p-0">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+            <div class="card-body p-2">
+              <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Footer -->
+<div class="footer">
+  <div class="text" style="grid-row: 1; grid-column: 1;">1357 Mutt Street, Rottweiler CA. 12345</div>
+  <div class="text" style="grid-row: 2; grid-column: 1;">Phone: 123-456-7890</div>
+  <div class="text d-flex justify-content-end" style="grid-row: 1; grid-column: 2;"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
+  <div class="text text-end" style="grid-row: 2; grid-column: 2;">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
+</div> 
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
