--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -46,23 +46,82 @@
 
 
 
-<!-- <div class="container bkGround"> -->
-  <div class="row bkGround">
+<div class="container bkGround">
+  <div class="row">
     <div class="col">
     <h1 class="text-center txtColor">Our Menu</h1>
     </div>
   </div>
-<!-- </div> -->
+</div>
 
+<br>
 
-<div class="menu">
-  <div class="photo"></div>
+<div class="container">
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col ps-0">
+      <div class="card edges">
+        <img src="../assets/menubeef.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title txtColor">Sandwiches</h5>
+          <p class="card-text fntFace">All sandwiches come with an side of crispy fries</p>
+          <br>
+          <h2 class="fntFace">Sizzling Steak Sandwich</h2>
+          <p class="fntFace">Open faced steak sandwich with grilled belle peppers and fried onions.</p>
+
+          <hr>
+
+        </div>
+      </div>
+    </div>
+    <div class="col pe-0">
+      <div class="card edges">
+        <img src="../assets/menuseafood.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title txtColor">Seafood</h5>
+          <p class="card-text fntFace">All seafood comes with a side of rice pilaf and grilled vegetables</p>
+          <br>
+          <h2 class="fntFace">Honey Shrimp Skewers</h2>
+          <p class="fntFace">Ten honey glazed shrimps grilled with sesame seeds and rosemary.</p>
+
+          <hr>
+
+        </div>
+      </div>
+    </div>
+    <div class="col ps-0">
+      <div class="card edges">
+        <img src="../assets/menumeat.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title txtColor">On the grill</h5>
+          <p class="card-text fntFace">Served with corn, cheddar biscuits, and your choice of coleslaw or potato salad.</p>
+          <br>
+          <h2 class="fntFace">Baby Back - Full Rack</h2>
+          <p class="fntFace">A full rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
+
+          <hr>
+
+        </div>
+      </div>
+    </div>
+    <div class="col pe-0">
+      <div class="card edges">
+        <img src="../assets/menudesserts.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title txtColor">Desserts</h5>
+          <p class="card-text fntFace">A shot of esspresso can be added to any dessert for an additional $2.</p>
+          <br>
+          <h2 class="fntFace">Double Walnut Brownies</h2>
+          <p class="fntFace">Two brownies with a walnut crust, ice cream and chocolate sauce.</p>
+
+          <hr>
+
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
-<div class="menu">
-  <div class="photo"></div>
-</div>
 
 
 
