Beef Menu changes

--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -70,6 +70,23 @@
 
           <hr>
 
+          <h2 class="fntFace">Tenderloin Sliders</h2>
+          <p class="fntFace">Three beef tenderloin sliders with horseradish cream and blackberry bbq.</p>
+
+          <hr>
+
+          <h2 class="fntFace">Classic Chicken Panini</h2>
+          <p class="fntFace">Grilled chicken with Monterey jack, romaine lettuce, tomato, and cilantro.</p>
+
+          <hr>
+
+          <h2 class="fntFace">Smoked Turkey Club</h2>
+          <p class="fntFace">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
+
+          <hr>
+
+          <h2 class="fntFace">Tuna Sandwich</h2>
+          <p class="fntFace">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
         </div>
       </div>
     </div>
