--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -73,20 +73,23 @@
           <h2 class="fntFace">Tenderloin Sliders</h2>
           <p class="fntFace">Three beef tenderloin sliders with horseradish cream and blackberry bbq.</p>
 
-          <hr>
+          <hr class="font">
 
           <h2 class="fntFace">Classic Chicken Panini</h2>
           <p class="fntFace">Grilled chicken with Monterey jack, romaine lettuce, tomato, and cilantro.</p>
 
-          <hr>
+          <hr class="font">
 
           <h2 class="fntFace">Smoked Turkey Club</h2>
           <p class="fntFace">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
 
-          <hr>
+          <hr class="font">
 
           <h2 class="fntFace">Tuna Sandwich</h2>
           <p class="fntFace">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
+
+          <hr class="font">
+
         </div>
       </div>
     </div>
@@ -100,7 +103,25 @@
           <h2 class="fntFace">Honey Shrimp Skewers</h2>
           <p class="fntFace">Ten honey glazed shrimps grilled with sesame seeds and rosemary.</p>
 
-          <hr>
+          <hr class="font">
+
+          <h2 class="fntFace">Grilled Salmon</h2>
+          <p class="fntFace">Salmon grilled in a lime butter sauce.</p>
+
+          <hr class="font">
+
+          <h2 class="fntFace">Grilled Tilapia</h2>
+          <p class="fntFace">A whole grilled tilapia cooked with smoked paprika.</p>
+
+          <hr class="font">
+
+          <h2 class="fntFace">Parmesan Fish Sticks</h2>
+          <p class="fntFace">Sliced salmon in parmesan breading served with lemon dill tartar sauce.</p>
+
+          <hr class="font">
+
+          <h2></h2>
+          <p></p>
 
         </div>
       </div>
@@ -115,7 +136,27 @@
           <h2 class="fntFace">Baby Back - Full Rack</h2>
           <p class="fntFace">A full rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
 
-          <hr>
+          <hr class="font">
+
+          <h2 class="fntFace">Baby Back - Half Rack</h2>
+          <p class="fntFace">A half rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
+
+          <hr class="font">
+
+          <h2 class="fntFace">Boneless Ribeye</h2>
+          <p class="fntFace">A three inch thick boneless ribeye grilled in a rosemary rub and butter</p>
+
+          <hr class="font">
+
+          <h2 class="fntFace">Smoked Turkey Club</h2>
+          <p class="fntFace">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
+
+          <hr class="font">
+
+          <h2 class="fntFace">Tuna Sandwich</h2>
+          <p class="fntFace">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
+
+          <hr class="font">
 
         </div>
       </div>
@@ -130,7 +171,27 @@
           <h2 class="fntFace">Double Walnut Brownies</h2>
           <p class="fntFace">Two brownies with a walnut crust, ice cream and chocolate sauce.</p>
 
-          <hr>
+          <hr class="font">
+
+          <h2 class="fntFace">Cheese Cake with Chocolate Sauce</h2>
+          <p class="fntFace">Cheesecake with ice cream, chocolate shavings and chocolate sauce.</p>
+
+          <hr class="font">
+
+          <h2 class="fntFace">Triple Chocolate Brownie</h2>
+          <p class="fntFace">A tripple chocolate brownie served with vanilla ice cream and walnuts.</p>
+
+          <hr class="font">
+
+          <h2 class="fntFace">House Made Shaved Gelato and Cookies</h2>
+          <p class="fntFace">Your choice of shaved gelato with whole cookies. Options change daily.</p>
+
+          <hr class="font">
+
+          <h2 class="fntFace">Grilled Peaches and Ice Cream</h2>
+          <p class="fntFace">Grilled peaches in cinnamon and brown sugar glaze with ice cream.</p>
+
+          <hr class="font">
 
         </div>
       </div>
