--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -46,84 +46,84 @@
     <div class="container-fluid">
       <div class="row d-flex justify-content-between" style="padding: 44px 7.3%;">
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
           </div>
         </div>
         <div class="col p-0">
-          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none;">
+          <div class="card" style="width: 398px; border-radius: 0; margin: auto; float: none; margin-bottom: 0.75rem;">
             <div class="card-body p-2">
               <img src="../assets/photo01.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
             </div>
