--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="row d-flex justify-content-between" style="padding: 44px 7.3%;">
             <div class="col-auto" style="background-image: url(./assets/homeSingle.jpg); background-size: cover; width: 35.1%;">
             </div>
-            <div class="col" style="width: 49.48%; height: 23.44%;">
+            <div class="col" style="width: 49.48%;z height: 23.44%;">
                 <div class="card border-0" style="border-radius: 0;">
                     <div class="card-body p-0">
                       <h5 class="card-title p-3 pb-0" style="font-size: 3vw; font-family:Fugaz One; color: #5F002B;">Muzzles Sandwiches & Grill</h5>
