--- a/pages/About.html
+++ b/pages/About.html
@@ -16,7 +16,7 @@
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="../assets/MuzzlesLogo.png" alt="Bootstrap" width="250px">
+        <img src="../assets/MuzzlesLogo.png" alt="Logo" width="250px">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
@@ -125,17 +125,6 @@
   <div class="text d-flex justify-content-end" style="grid-row: 1; grid-column: 2;"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
   <div class="text text-end" style="grid-row: 2; grid-column: 2;">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
