--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -16,15 +16,15 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="../assets/MuzzlesLogo.png" alt="Muzzles Logo" width="250px">
+          <img src="./assets/MuzzlesLogo.png" alt="Bootstrap" width="250px">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" aria-current="page" href="#">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Menu</a>
@@ -60,7 +60,7 @@
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col ps-0">
       <div class="card edges">
-        <img src="../assets/menubeef.jpg" class="card-img-top" alt="...">
+        <img src="../assets/menubeef.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
         <div class="card-body">
           <h5 class="card-title txtColor">Sandwiches</h5>
           <p class="card-text fntFace">All sandwiches come with an side of crispy fries</p>
@@ -95,7 +95,7 @@
     </div>
     <div class="col pe-0">
       <div class="card edges">
-        <img src="../assets/menuseafood.jpg" class="card-img-top" alt="...">
+        <img src="../assets/menuseafood.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
         <div class="card-body">
           <h5 class="card-title txtColor">Seafood</h5>
           <p class="card-text fntFace">All seafood comes with a side of rice pilaf and grilled vegetables</p>
@@ -120,15 +120,16 @@
 
           <hr class="font">
 
-          <h2></h2>
-          <p></p>
+          <h2>&nbsp;</h2>
+          <p>&nbsp;</p>
 
+          <hr>
         </div>
       </div>
     </div>
     <div class="col ps-0">
       <div class="card edges">
-        <img src="../assets/menumeat.jpg" class="card-img-top" alt="...">
+        <img src="../assets/menumeat.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
         <div class="card-body">
           <h5 class="card-title txtColor">On the grill</h5>
           <p class="card-text fntFace">Served with corn, cheddar biscuits, and your choice of coleslaw or potato salad.</p>
@@ -163,7 +164,7 @@
     </div>
     <div class="col pe-0">
       <div class="card edges">
-        <img src="../assets/menudesserts.jpg" class="card-img-top" alt="...">
+        <img src="../assets/menudesserts.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
         <div class="card-body">
           <h5 class="card-title txtColor">Desserts</h5>
           <p class="card-text fntFace">A shot of esspresso can be added to any dessert for an additional $2.</p>
@@ -199,6 +200,7 @@
   </div>
 </div>
 
+<footer>1357 Mutt Street, Rottweiler CA. 12345  Phone: 123-456-7890  Copyright © Muzzles Restaurant</footer>
 
 
 
