--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -65,27 +65,27 @@
           <h5 class="card-title txtColor">Sandwiches</h5>
           <p class="card-text fntFace">All sandwiches come with an side of crispy fries</p>
           <br>
-          <h2 class="fntFace">Sizzling Steak Sandwich</h2>
+          <h2 class="fntName">Sizzling Steak Sandwich</h2>
           <p class="fntFace">Open faced steak sandwich with grilled belle peppers and fried onions.</p>
 
           <hr>
 
-          <h2 class="fntFace">Tenderloin Sliders</h2>
+          <h2 class="fntName">Tenderloin Sliders</h2>
           <p class="fntFace">Three beef tenderloin sliders with horseradish cream and blackberry bbq.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Classic Chicken Panini</h2>
+          <h2 class="fntName">Classic Chicken Panini</h2>
           <p class="fntFace">Grilled chicken with Monterey jack, romaine lettuce, tomato, and cilantro.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Smoked Turkey Club</h2>
+          <h2 class="fntName">Smoked Turkey Club</h2>
           <p class="fntFace">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Tuna Sandwich</h2>
+          <h2 class="fntName">Tuna Sandwich</h2>
           <p class="fntFace">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
 
           <hr class="font">
@@ -100,22 +100,22 @@
           <h5 class="card-title txtColor">Seafood</h5>
           <p class="card-text fntFace">All seafood comes with a side of rice pilaf and grilled vegetables</p>
           <br>
-          <h2 class="fntFace">Honey Shrimp Skewers</h2>
+          <h2 class="fntName">Honey Shrimp Skewers</h2>
           <p class="fntFace">Ten honey glazed shrimps grilled with sesame seeds and rosemary.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Grilled Salmon</h2>
+          <h2 class="fntName">Grilled Salmon</h2>
           <p class="fntFace">Salmon grilled in a lime butter sauce.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Grilled Tilapia</h2>
+          <h2 class="fntName">Grilled Tilapia</h2>
           <p class="fntFace">A whole grilled tilapia cooked with smoked paprika.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Parmesan Fish Sticks</h2>
+          <h2 class="fntName">Parmesan Fish Sticks</h2>
           <p class="fntFace">Sliced salmon in parmesan breading served with lemon dill tartar sauce.</p>
 
           <hr class="font">
@@ -134,27 +134,27 @@
           <h5 class="card-title txtColor">On the grill</h5>
           <p class="card-text fntFace">Served with corn, cheddar biscuits, and your choice of coleslaw or potato salad.</p>
           <br>
-          <h2 class="fntFace">Baby Back - Full Rack</h2>
+          <h2 class="fntName">Baby Back - Full Rack</h2>
           <p class="fntFace">A full rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Baby Back - Half Rack</h2>
+          <h2 class="fntName">Baby Back - Half Rack</h2>
           <p class="fntFace">A half rack of pork babyback ribs grilled and glazed with blackberry bbq.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Boneless Ribeye</h2>
+          <h2 class="fntName">Boneless Ribeye</h2>
           <p class="fntFace">A three inch thick boneless ribeye grilled in a rosemary rub and butter</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Smoked Turkey Club</h2>
+          <h2 class="fntName">Smoked Turkey Club</h2>
           <p class="fntFace">Smoked deli turkey, maple bacon, cranberry aioli, lettuce and tomatoes.</p>
 
           <hr class="font">
 
-          <h2 class="fntFace">Tuna Sandwich</h2>
+          <h2 class="fntName">Tuna Sandwich</h2>
           <p class="fntFace">Tuna salad with sprouts, sliced tomatoes and cilantro lime mayo on toast.</p>
 
           <hr class="font">
