--- a/pages/About.html
+++ b/pages/About.html
@@ -44,7 +44,8 @@
 
 
   <div class="container-fluid aboutSection1">
-    <img class="aboutSectionItem1_1" src="../assets/AboutMain.jpg" alt="Two dogs cooking">
+    <div class="aboutSectionItem1_1"><img src="../assets/AboutMain.jpg" alt="Two dogs cooking" width="100%"></div>
+    
     <div class="aboutSectionItem1_2">
       <div class="aboutSectionItem1_2_Title">The Story Behind the Grill</div>
       <div class="aboutSectionItem1_2_Paragraph">Malesuada fames ac turpis egestas integer eget aliquet nibh praesent. Mattis
@@ -79,37 +80,37 @@
     <div class="aboutSectionItem2_1">
       <div>Our Team</div>
     </div>
-    <div class="aboutSectionItem2_2-7" style="grid-row: 3; grid-column: 1;">
+    <div class="aboutSectionItem2_2-7 location1">
       <img src="../assets/doxie3.jpg" alt="">
       <div class="title">George</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
 
-    <div class="aboutSectionItem2_2-7" style="grid-row: 3; grid-column: 3;">
+    <div class="aboutSectionItem2_2-7 location2">
       <img src="../assets/jackrussel.jpg" alt="">
       <div class="title">Butterscotch</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
 
-    <div class="aboutSectionItem2_2-7" style="grid-row: 3; grid-column: 5;">
+    <div class="aboutSectionItem2_2-7 location3">
       <img src="../assets/doxie1.jpg" alt="">
       <div class="title">Louie</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
 
-    <div class="aboutSectionItem2_2-7" style="grid-row: 5; grid-column: 1;">
+    <div class="aboutSectionItem2_2-7 location4">
       <img src="../assets/novascotia.jpg" alt="">
       <div class="title">Louie</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
     
-    <div class="aboutSectionItem2_2-7" style="grid-row: 5; grid-column: 3;">
+    <div class="aboutSectionItem2_2-7 location5" >
       <img src="../assets/doxie2.jpg" alt="">
       <div class="title">Skittles</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
     </div>
 
-    <div class="aboutSectionItem2_2-7" style="grid-row: 5; grid-column: 5;">
+    <div class="aboutSectionItem2_2-7 location6">
       <img src="../assets/staffie.jpg" alt="">
       <div class="title">Mario</div>
       <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sed elementum tempus egestas sed sed risus. Feugiat scelerisque varius morbi enim. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Odio facilisis mauris sit amet massa vitae.</div>
@@ -120,10 +121,10 @@
 
 
 <div class="footer">
-  <div class="text" style="grid-row: 1; grid-column: 1;">1357 Mutt Street, Rottweiler CA. 12345</div>
-  <div class="text" style="grid-row: 2; grid-column: 1;">Phone: 123-456-7890</div>
-  <div class="text d-flex justify-content-end" style="grid-row: 1; grid-column: 2;"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
-  <div class="text text-end" style="grid-row: 2; grid-column: 2;">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
+  <div class="text location1">1357 Mutt Street, Rottweiler CA. 12345</div>
+  <div class="text location2">Phone: 123-456-7890</div>
+  <div class="text location3"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
+  <div class="text location4">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
 </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
