--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
 <!-- Footer -->
 <div class="footer">
-    <div class="text" style="grid-row: 1; grid-column: 1;">1357 Mutt Street, Rottweiler CA. 12345</div>
-    <div class="text" style="grid-row: 2; grid-column: 1;">Phone: 123-456-7890</div>
-    <div class="text d-flex justify-content-end" style="grid-row: 1; grid-column: 2;"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
-    <div class="text text-end" style="grid-row: 2; grid-column: 2;">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
-  </div> 
+  <div class="text location1">1357 Mutt Street, Rottweiler CA. 12345</div>
+  <div class="text location2">Phone: 123-456-7890</div>
+  <div class="text location3"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
+  <div class="text location4">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
+</div>
