--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -200,7 +200,9 @@
   </div>
 </div>
 
-<footer>1357 Mutt Street, Rottweiler CA. 12345  Phone: 123-456-7890  Copyright © Muzzles Restaurant</footer>
+<footer>1357 Mutt Street, Rottweiler CA. 12345</footer>
+   <footer>Phone: 123-456-7890</footer>
+     <footer class="text-end">Copyright © Muzzles Restaurant</footer>
 
 
 
