--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -200,9 +200,10 @@
   </div>
 </div>
 
-<footer>1357 Mutt Street, Rottweiler CA. 12345</footer>
-   <footer>Phone: 123-456-7890</footer>
-     <footer class="text-end">Copyright © Muzzles Restaurant</footer>
+<footer class="fntFace">1357 Mutt Street, Rottweiler CA. 12345</footer>
+   <footer class="fntFace">Phone: 123-456-7890</footer>
+   <img src="../assets/CompanyLogo.png">
+     <footer class="text-end fntFace">Copyright © Muzzles Restaurant</footer>
 
 
 
