--- a/pages/Catering.html
+++ b/pages/Catering.html
@@ -62,54 +62,21 @@
       </div>
     </div>
     <div class="cateringGallery">
-      <img src="../assets/catering1.jpg" alt="" style="grid-column: 1;">
-      <img src="../assets/catering2.jpg" alt="" style="grid-column: 3;">
-      <img src="../assets/catering3.jpg" alt="" style="grid-column: 5;">
+      <img src="../assets/catering1.jpg" alt="" class="location1">
+      <img src="../assets/catering2.jpg" alt="" class="location2">
+      <img src="../assets/catering3.jpg" alt="" class="location3">
+      <img src="../assets/cateringMaine.jpg" alt="" class="location4">
     </div>
-
-
-
-
-
-
-
 
 
   </div>
 
   <div class="footer">
-    <div class="text" style="grid-row: 1; grid-column: 1;">1357 Mutt Street, Rottweiler CA. 12345</div>
-    <div class="text" style="grid-row: 2; grid-column: 1;">Phone: 123-456-7890</div>
-    <div class="text d-flex justify-content-end" style="grid-row: 1; grid-column: 2;"><img
-        src="../assets/CompanyLogo.png" alt="" width="100px"></div>
-    <div class="text text-end" style="grid-row: 2; grid-column: 2;">Copyright © Muzzles RestaurantPhone: 123-456-7890
-    </div>
+    <div class="text location1">1357 Mutt Street, Rottweiler CA. 12345</div>
+    <div class="text location2">Phone: 123-456-7890</div>
+    <div class="text location3"><img src="../assets/CompanyLogo.png" alt="" width="100px"></div>
+    <div class="text location4">Copyright © Muzzles RestaurantPhone: 123-456-7890</div>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
