--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
       <div class="header"></div>
 
       <!-- Muzzles Sandwiches & Grill -->
-      <div class="container-fluid pt-3 g-5">
-        <div class="row d-flex justify-content-between" style="padding: 44px 7.3%; height: 23.44%;">
-            <div class="col-xl-5 col-md-12" style="background-image: url(./assets/homeSingle.jpg); background-size: cover; overflow: hidden; margin-bottom: 1rem; margin-right: 1rem; padding: 0;">
+      <div class="container-fluid pt-3">
+        <div class="row" style="padding: 44px 7.3%; height: 23.44%;">
+            <div class="col-xl-5 col-md-12 m-md-1 p-0" style="background-image: url(./assets/homeSingle.jpg); background-size: cover; overflow: hidden; padding: 0;">
               <img src="./assets/homeSingle.jpg" alt="" style="opacity: 0;">
             </div>
-            <div class="col-xl col-md-12 p-0 m-md-0" style="margin-bottom: 1rem; margin-left: 1rem;">
-                <div class="card border-0" style="border-radius: 0; height: 400px;">
+            <div class="col-xl col-md-12 m-md-2">
+                <div class="card border-0" style="border-radius: 0; height: 25rem;">
                     <div class="card-body p-0">
                       <h5 class="card-title p-3 pb-0" style="font-size: 3vw; font-family:Fugaz One; color: #5F002B;">Muzzles Sandwiches & Grill</h5>
                       <p class="card-text p-3 pt-0" style="font-size: 1vw; font-family:Montauk-light; color: #5F002B;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
