--- a/pages/About.html
+++ b/pages/About.html
@@ -14,7 +14,7 @@
 <body>
   <!-- nav start -->
   <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid d-flex justify-content-between" width="100%">
+    <div class="container-fluid p-0" >
         <img src="../assets/MuzzlesLogo.png" alt="Logo" width="250px" class="navImage" >
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
