--- a/pages/Catering.html
+++ b/pages/Catering.html
@@ -15,10 +15,8 @@
 
   <!-- nav start -->
   <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="../assets/MuzzlesLogo.png" alt="Bootstrap" width="250px">
-      </a>
+    <div class="container-fluid p-0" >
+        <img src="../assets/MuzzlesLogo.png" alt="Logo" width="250px" class="navImage" >
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
         <span class="navbar-toggler-icon"></span>
