--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
               <img src="./assets/homeSingle.jpg" alt="" style="opacity: 0;">
             </div>
             <div class="col-xl col-md-12 m-md-2">
-                <div class="card border-0" style="border-radius: 0; height: 25rem;">
+                <div class="card border-0" style="border-radius: 0; height: max-content;">
                     <div class="card-body p-0">
-                      <h5 class="card-title p-3 pb-0" style="font-size: 3vw; font-family:Fugaz One; color: #5F002B;">Muzzles Sandwiches & Grill</h5>
-                      <p class="card-text p-3 pt-0" style="font-size: 1vw; font-family:Montauk-light; color: #5F002B;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                      <h5 class="card-title p-3 pb-0 mSG mSG-md mSG-sm">Muzzles Sandwiches & Grill</h5>
+                      <p class="card-text p-3 pt-0 ct" style="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
-                    <img src="./assets/HomeImage.jpg" class="card-img-top" alt="..." style="border-radius: 0;">
+                    <img src="./assets/HomeImage.jpg" class="card-img-top" alt="..." style="border-radius: 0; align-self: flex-end;">
                   </div>
             </div>
         </div>
