--- a/pages/Photos.html
+++ b/pages/Photos.html
@@ -11,26 +11,25 @@
   <body>
     <!-- nav -->
     <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="../assets/MuzzlesLogo.png" alt="Bootstrap" width="250px">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
+      <div class="container-fluid p-0" >
+          <img src="../assets/MuzzlesLogo.png" alt="Logo" width="250px" class="navImage" >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">About</a>
+              <a class="nav-link" href="../pages/About.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="../pages/Menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Catering</a>
+              <a class="nav-link" href="../pages/Catering.html">Catering</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Photo</a>
+              <a class="nav-link" href="../pages/Photos.html">Photo</a>
             </li>
           </ul>
         </div>
