--- a/pages/About.html
+++ b/pages/About.html
@@ -15,7 +15,7 @@
   <!-- nav start -->
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid p-0" >
-        <img src="../assets/MuzzlesLogo.png" alt="Logo" width="250px" class="navImage" >
+      <a href="../index.html"><img src="../assets/MuzzlesLogo.png" alt="Logo" width="250px" class="navImage" ></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: #5F002B;">
         <span class="navbar-toggler-icon"></span>
